# misc

./: .gitignore  BERT.py  README.md  chat-pdf.py  filenamer.py  gifmaker.py  ocrmypdf-recursive.py  pdf-ocr.py  pdf_ocr.py  render_dialog.py  render_dialog_markdown.py  scrape-macos-calendar.py  text-enhancer.py  whisper.py  word-by-word-coauthor.py
algorithms/lattice/: lattice.py
image_generation/: dual-batch-generate.py  generate-image.py  image-evolution.py  image_echo.py  moviemaker.py  sentence-evolution.py  story-images.py
pgp-gen/: gen_pgp.py  mail-addresses.txt
prediction/: soccer_bet.py
python_scripts/: .gitignore  FILENAMER_README.md  filenamer  filenamer.py  filenamer_config.yaml  gen_pgp.py  pyproject.toml  requirements.txt  rewrite_tags.py  scrape-macos-calendar.py  scrape_macos_calendar.py  text-enhancer.py  wc.py  whisper.py
